--- a/Estimated/Base.lproj/LaunchScreen.storyboard
+++ b/Estimated/Base.lproj/LaunchScreen.storyboard
@@ -1,25 +1,124 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sHu-Je-Dat">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="EHf-IW-A2E">
+        <scene sceneID="ma9-ua-UzO">
             <objects>
-                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="Sxw-JF-JZ7" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8Ky-ui-qDj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="UUz-AM-lxt"/>
                     </view>
+                    <navigationItem key="navigationItem" id="dnO-id-jGI"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hok-ri-o9z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="555.07246376811599" y="-275.22321428571428"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="8S3-ff-b6U">
+            <objects>
+                <viewController id="bWo-t0-YVT" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="n36-KI-PtF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="x30-3r-veI">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="ASD-FI-LXf">
+                                        <rect key="frame" x="0.0" y="55.5" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ASD-FI-LXf" id="0oY-ss-iKL">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="x30-3r-veI" firstAttribute="leading" secondItem="tvL-yX-Qlz" secondAttribute="leading" id="PqZ-nM-QsL"/>
+                            <constraint firstItem="x30-3r-veI" firstAttribute="trailing" secondItem="tvL-yX-Qlz" secondAttribute="trailing" id="pWj-6T-qV6"/>
+                            <constraint firstItem="x30-3r-veI" firstAttribute="top" secondItem="tvL-yX-Qlz" secondAttribute="top" id="r3M-fW-JoW"/>
+                            <constraint firstItem="x30-3r-veI" firstAttribute="bottom" secondItem="tvL-yX-Qlz" secondAttribute="bottom" id="rkS-8z-LtG"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="tvL-yX-Qlz"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="xfm-JQ-uic"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0pw-RG-ieI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="555.07246376811599" y="-938.16964285714278"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="2LZ-2k-wJT">
+            <objects>
+                <tabBarController id="sHu-Je-Dat" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="QQq-zs-wLZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="U28-Jd-m4G" kind="relationship" relationship="viewControllers" id="ngL-9A-fgf"/>
+                        <segue destination="Az2-T2-kPu" kind="relationship" relationship="viewControllers" id="JU1-Lu-kYo"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NLb-Wg-vfv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1725" y="-650"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="Hwq-lY-kCP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="U28-Jd-m4G" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 1" id="Jhe-FO-iTf"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SeF-gn-PV4">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="bWo-t0-YVT" kind="relationship" relationship="rootViewController" id="UhL-nN-YYa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ArD-3f-D4L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-355.07246376811599" y="-938.16964285714278"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="uuq-j3-2Sf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Az2-T2-kPu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item 2" id="vOA-GT-5e4"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="16a-tt-Kh8">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Sxw-JF-JZ7" kind="relationship" relationship="rootViewController" id="KPp-Ve-oKD"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gUN-GZ-fbC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-355.07246376811599" y="-275.22321428571428"/>
         </scene>
     </scenes>
 </document>
